Afegits tests a comanda-ms-common i comanda-ms-acl. Eliminats tests obsolets i comentats als controladors i serveis ACL.